httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/ttl: "3600"
spec:
  parentRefs:
    - name: gateway
      namespace: website
      sectionName: https-docs-hololinked-dev
  hostnames:
    - docs.hololinked.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hololinked-python-docs
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs-redirect
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/ttl: "3600"
spec:
  parentRefs:
    - name: gateway
      namespace: website
      sectionName: http-docs-hololinked-dev
  hostnames:
    - docs.hololinked.dev
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
